refactor handlers and bug fix
