# internal/handlers/userHandler.go
@@ -49,16 +49,6 @@ func (uh *userHandler) Register(router *chi.Mux) {
 	uh.Log.Info("Successfully created http route", slog.String("route", loginURL))
 }
 
-// func (uh *userHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
-// 	user := models.User{}
-// 	c.ShouldBindJSON(&user)
-// 	err := uh.UserService.CreateUser(&user)
-// 	if err != nil {
-// 		log.Fatal(err)
-// 	}
-// 	c.JSON(http.StatusOK, user.ID)
-// }
-
 // @Summary Получить пользователя по ID
 // @Description Получает информацию о пользователе
 // @Tags users
@@ -68,7 +58,7 @@ func (uh *userHandler) Register(router *chi.Mux) {
 // @Failure 400 {string} string "Invalid ID"
 // @Failure 404 {string} string "User Not Found"
 // @Failure 500 {string} string "Failed to find user"
-// @Router /user/{id} [get]
+// @Router /users/{id} [get]
 func (uh *userHandler) FindUserByID(w http.ResponseWriter, r *http.Request) {
 	log := logger.WithMethod(uh.Log, "FindUserByID")
 
@@ -92,6 +82,9 @@ func (uh *userHandler) FindUserByID(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, fmt.Sprintf("Failed to find user by id: %s", err.Error()), http.StatusInternalServerError)
 		return
 	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(user)
 
 }
@@ -112,6 +105,8 @@ func (uh *userHandler) FindAllUsers(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(users)
 }
 
@@ -171,6 +166,7 @@ func (uh *userHandler) RegisterUser(w http.ResponseWriter, r *http.Request) {
 
 	log.Info("User registered and logged in", slog.Int("userID", user.ID), slog.String("email", user.Email))
 
+	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusCreated)
 	json.NewEncoder(w).Encode(map[string]string{
 		"access_token":  tokenPair.AccessToken,
@@ -224,6 +220,9 @@ func (uh *userHandler) LoginUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	log.Info("User successfully logged in", slog.Int("userID", user.ID), slog.String("email", user.Email))
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(map[string]string{
 		"access_token":  tokenPair.AccessToken,
 		"refresh_token": tokenPair.RefreshToken,
